tests/rosetta/transpiler/Pascal/avl-tree.error
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/rosetta/transpiler/Pascal/avl-tree.pas
avl-tree.pas(74,31) Error: Illegal type conversion: "TFPGMap$2$crcA201DD2D" to "Variant"
avl-tree.pas(80,31) Error: Illegal type conversion: "TFPGMap$2$crcA201DD2D" to "Variant"
avl-tree.pas(86,31) Error: Illegal type conversion: "TFPGMap$2$crcA201DD2D" to "Variant"
avl-tree.pas(104,31) Error: Illegal type conversion: "TFPGMap$2$crcA201DD2D" to "Variant"
avl-tree.pas(110,31) Error: Illegal type conversion: "TFPGMap$2$crcA201DD2D" to "Variant"
avl-tree.pas(116,31) Error: Illegal type conversion: "TFPGMap$2$crcA201DD2D" to "Variant"
avl-tree.pas(122,31) Error: Illegal type conversion: "TFPGMap$2$crcA201DD2D" to "Variant"
avl-tree.pas(128,31) Error: Illegal type conversion: "TFPGMap$2$crcA201DD2D" to "Variant"
avl-tree.pas(134,31) Error: Illegal type conversion: "TFPGMap$2$crcA201DD2D" to "Variant"
avl-tree.pas(140,31) Error: Illegal type conversion: "TFPGMap$2$crcA201DD2D" to "Variant"
avl-tree.pas(146,31) Error: Illegal type conversion: "TFPGMap$2$crcA201DD2D" to "Variant"
avl-tree.pas(154,40) Error: Ordinal expression expected
avl-tree.pas(181,45) Error: Incompatible type for arg no. 1: Got "Variant", expected "TFPGMap<System.ShortString,System.Variant>"
avl-tree.pas(182,32) Error: Incompatible type for arg no. 3: Got "TFPGMap<System.ShortString,System.Variant>", expected "Variant"
avl-tree.pas(183,8) Error: Incompatible types: got "Variant" expected "TFPGMap<System.ShortString,System.Variant>"
avl-tree.pas(189,48) Error: Incompatible type for arg no. 1: Got "Variant", expected "TFPGMap<System.ShortString,System.Variant>"
avl-tree.pas(190,59) Error: Incompatible type for arg no. 1: Got "Variant", expected "TFPGMap<System.ShortString,System.Variant>"
avl-tree.pas(191,21) Error: Incompatible type for arg no. 1: Got "Variant", expected "TFPGMap<System.ShortString,System.Variant>"
avl-tree.pas(194,45) Error: Incompatible type for arg no. 1: Got "Variant", expected "TFPGMap<System.ShortString,System.Variant>"
avl-tree.pas(195,32) Error: Incompatible type for arg no. 3: Got "TFPGMap<System.ShortString,System.Variant>", expected "Variant"
avl-tree.pas(196,8) Error: Incompatible types: got "Variant" expected "TFPGMap<System.ShortString,System.Variant>"
avl-tree.pas(203,22) Error: Incompatible types: got "Variant" expected "TFPGMap<System.ShortString,System.Variant>"
avl-tree.pas(204,23) Error: Incompatible types: got "Variant" expected "TFPGMap<System.ShortString,System.Variant>"
avl-tree.pas(224,22) Error: Incompatible types: got "Variant" expected "TFPGMap<System.ShortString,System.Variant>"
avl-tree.pas(243,19) Error: Incompatible types: got "Variant" expected "TFPGMap<System.ShortString,System.Variant>"
avl-tree.pas(248,16) Error: Incompatible types: got "TFPGMap<System.ShortString,System.Variant>" expected "LongInt"
avl-tree.pas(249,48) Error: Illegal qualifier
avl-tree.pas(250,16) Error: Illegal qualifier
avl-tree.pas(274,22) Error: Incompatible types: got "Variant" expected "TFPGMap<System.ShortString,System.Variant>"
avl-tree.pas(297,8) Error: Wrong number of parameters specified for call to "Map2"
avl-tree.pas(143,10) Error: Found declaration: Map2(LongInt):TFPGMap$2<SYSTEM.ShortString,SYSTEM.Variant>;
avl-tree.pas(299,19) Error: Incompatible types: got "Variant" expected "TFPGMap<System.ShortString,System.Variant>"
avl-tree.pas(308,29) Error: Incompatible type for arg no. 1: Got "Variant", expected "TFPGMap<System.ShortString,System.Variant>"
avl-tree.pas(309,39) Error: Incompatible type for arg no. 1: Got "Variant", expected "TFPGMap<System.ShortString,System.Variant>"
avl-tree.pas(311,58) Error: Incompatible types: got "Constant String" expected "LongInt"
avl-tree.pas(312,30) Error: Incompatible types: got "Constant String" expected "LongInt"
avl-tree.pas(318,16) Error: Incompatible types: got "TFPGMap<System.ShortString,System.Variant>" expected "LongInt"
avl-tree.pas(319,48) Error: Illegal qualifier
avl-tree.pas(320,16) Error: Illegal qualifier
avl-tree.pas(367,65) Error: Incompatible types: got "Constant String" expected "LongInt"
avl-tree.pas(368,68) Error: Incompatible types: got "Constant String" expected "LongInt"
avl-tree.pas(370,24) Error: Incompatible type for arg no. 1: Got "Variant", expected "TFPGMap<System.ShortString,System.Variant>"
avl-tree.pas(371,24) Error: Incompatible type for arg no. 1: Got "Variant", expected "TFPGMap<System.ShortString,System.Variant>"
avl-tree.pas(404,13) Error: Incompatible types: got "Variant" expected "TFPGMap<System.ShortString,System.Variant>"
avl-tree.pas(406,16) Error: Incompatible types: got "TFPGMap<System.ShortString,System.Variant>" expected "Variant"
avl-tree.pas(423) Fatal: There were 45 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
